# PodcastTracker

./: .dockerignore  Dockerfile  docker-compose.yml  find_feeds.py  podcast_tracker.db
.github/: copilot-instructions.md
podcast-tracker/: .env.example  .gitignore  README.md  podcast_tracker.db  pyproject.toml  pytest.ini  requirements.txt
podcast-tracker/src/: podcast_tracker.db
podcast-tracker/src/podcast_tracker/: __init__.py  config.py  main.py
podcast-tracker/src/podcast_tracker/api/: __init__.py  routes.py  schemas.py
podcast-tracker/src/podcast_tracker/database/: __init__.py  database.py  models.py
podcast-tracker/src/podcast_tracker/services/: __init__.py  podcast_service.py  rss_parser.py  scheduler.py
podcast-tracker/src/podcast_tracker/static/: index.html
podcast-tracker/src/podcast_tracker/static/css/: styles.css
podcast-tracker/src/podcast_tracker/static/js/: app.js
podcast-tracker/tests/: conftest.py
podcast-tracker/tests/integration/: test_api.py
podcast-tracker/tests/unit/: test_models.py  test_podcast_service.py  test_rss_parser.py
