[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-tracker"
version = "1.0.0"
description = "AI Podcast Tracker - Track Spanish AI podcasts automatically"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "feedparser>=6.0.10",
    "apscheduler>=3.10.4",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
podcast-tracker = "podcast_tracker.main:main"
